2008-08-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8627: Translation of the belog-module (thanks to Christopher Stelmaszyk and Christian Kuhn)
	* Fixed bug #8532: enhance TYPO3 manual (inline) (thanks to Steffen Kamper, Jens Hoffman and Uschi Renziehausen)

2008-08-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9109: Enable altMountPoints feature in RTE element browser (Thanks to Steffen Kamper)
	* Added feature #4686: Remove dependency of htmlArea RTE Spell Checker on php extension mbstring
	* Fixed issue #9185: Redundant code in class.tx_rtehtmlarea_browse_links.php

2008-08-15  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #6574: Template nextlevel with size=3 & allowed = 1 (Thanks to Georg Ringer)

2008-08-14  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9061: felogin - recursive storage pids in TypoScript (Thanks to Steffen Kamper)
	* Fixed bug #9095: xhtml in the backend by default (Thanks to Christian Kuhn)

2008-08-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9167: Feature: Mark extension as write protected (together with Steffen Kamper)

2008-08-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9063: Feature: Make Position of Editpanel more flexible

2008-08-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8988: htmlArea RTE: Pasting text from MS Word to Firefox 3 brings a lot of garbage
	* Follow-up for issue #8799: htmlArea RTE: correction to two path settings

2008-08-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9060: Wrong alert text in Constant editor

2008-08-11  Benjamin Mack  <benni@typo3.org>

	* Fixed #8259: Cleanup: Call to t3lib_div::devLog() without key (Thanks to Francois Suter)

2008-08-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #8673: htmlArea RTE drag n drop tab of image insertion not functional
	* Follow-up for issue #8717: Add suggested doc extension to htmlArea RTE ext_emconf.php